--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.15",
     "@stitches/react": "^1.2.8",
     "axios": "^1.6.2",
     "keen-slider": "^6.8.6",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "stripe": "^14.8.0"
+    "stripe": "^14.8.0",
+    "use-shopping-cart": "^3.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
