--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@stitches/react": "^1.2.8",
     "axios": "^1.6.2",
     "keen-slider": "^6.8.6",
